--- a/app/build.gradle
+++ b/app/build.gradle
@@ -200,8 +200,9 @@ ext.architectures = ["armeabi-v7a", "arm64-v8a", "x86", "x86_64"]
 ext.libDir = "$project.projectDir/src/main/jniLibs"
 
 task downloadAssets(type: Download) {
-    def assetVersion = "v1.2.3"
-    def baseUrl = "https://github.com/CypherpunkArmory/UserLAnd-Assets-Support/releases/download/$assetVersion"
+    def assetVersion = "v1.2.4"
+    //def baseUrl = "https://github.com/CypherpunkArmory/UserLAnd-Assets-Support/releases/download/$assetVersion"
+    def baseUrl = "https://gitlab.com/api/v4/projects/30140969/packages/generic/UserLAnd-Assets-Support/$assetVersion"
     for (arch in architectures) {
         src "$baseUrl/$arch-assets.zip"
         dest buildDir
