--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         android:extractNativeLibs="true"
         tools:replace="android:allowBackup, android:label, android:supportsRtl, android:theme">
 
-        <activity android:name=".MainActivity" android:launchMode="singleTask">
+        <activity android:name=".MainActivity" android:launchMode="singleTask"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
@@ -41,6 +42,12 @@
         <service
             android:name=".ServerService"
             android:stopWithTask="true" />
+
+        <service android:name="cn.leafcolor.service.JuliaService">  
+            <intent-filter>  
+                <action android:name="cn.leafcolor.service.JuliaService"/>  
+            </intent-filter>  
+        </service>
 
         <provider
             android:name="tech.ula.provider.UlaDocProvider"
