--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     android:installLocation="internalOnly"
     xmlns:tools="http://schemas.android.com/tools"
-    package="tech.ula">
+    package="cn.leafcolor.mathland">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -26,7 +26,7 @@
         tools:replace="android:allowBackup, android:label, android:supportsRtl, android:theme">
 
         <activity android:name=".MainActivity" android:launchMode="singleTask"
-            android:exported="true">
+                  android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
@@ -40,7 +40,7 @@
         </activity>
 
         <service
-            android:name=".ServerService"
+            android:name="tech.ula.ServerService"
             android:stopWithTask="true" />
 
         <service android:name="cn.leafcolor.service.JuliaService">  
