cn.leafcolor.mathland

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
         // sequential deployments to both production and beta tracks.
         def vcode = (int)(((new Date().getTime()/1000) - 1559347200) / 10)
 
-        applicationId "tech.ula"
+        applicationId "cn.leafcolor.mathland"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode vcode
