--- a/app/build.gradle
+++ b/app/build.gradle
@@ -249,10 +249,10 @@ dependencies {
     def kotlin_jdk_version = '1.3.31'
 
     // Androidx versions
-    def room_version = '2.1.0-beta01'
-    def lifecycle_version = '2.2.0-alpha01'
-    def support_library_version = '1.1.0-alpha06'
-    def preference_version = '1.1.0-alpha05'
+    def room_version = '2.1.0'
+    def lifecycle_version = '2.2.0'
+    def support_library_version = '1.2.1'
+    def preference_version = '1.1.1'
     def ktx_version = '1.0.2'
     def billing_version = '2.2.1'
 
