--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,10 @@ buildscript {
     }
 
     ext {
-        kotlin_version = '1.3.41'
+        kotlin_version = '1.5.0'
         android_plugin = '4.2.0'
         jacoco_version = '0.8.4'
-        navigation_version = '2.1.0-alpha05'
+        navigation_version = '2.1.0'
     }
 
     dependencies {
